# ruth

./: .gitignore  LICENSE  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CodePreview.tsx  CommandPalette.tsx  GraphCanvas.tsx  NodeHud.tsx  TopBar.tsx
frontend/src/components/edges/: CallEdge.tsx  ImportEdge.tsx
frontend/src/components/nodes/: ClassNode.tsx  DirectoryNode.tsx  FunctionNode.tsx  ModuleNode.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: useGraphStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: icons.ts  landmarks.ts  layout.ts  overlays.ts  pathfinding.ts
ruth/: __init__.py  cli.py  server.py
ruth/annotations/: __init__.py  complexity.py  coverage.py
ruth/graph/: __init__.py  engine.py
ruth/parser/: __init__.py  discovery.py  symbols.py
